import "cs_battle.proto" ;

message CSRangeInfo {
	required CSPoint start			= 1;
	required CSPoint end			= 2;	
}

message CSSkillInfo {

}

message CSMonsterInfo {
	required uint32 raid_id			= 1;
	required uint32 speed			= 2;
	required uint32 type			= 3;
	required bool is_boss			= 4;
	required CSRangeInfo body_range = 5;
	required uint32 physical_attack	= 6;
	required uint32 magic_attack	= 7;
	required uint32 skill_attack	= 8;
	required uint32 physical_defence	= 9;
	required uint32 magic_defence	= 10;
	required uint32 skill_defence	= 11;
	required uint32 health_point	= 12;
	required uint32 accurate		= 13;
	required uint32 dodge			= 14;
	required uint32 wreck			= 15;
	required uint32 parry			= 16;
	required uint32 critical_strike = 17;
	required uint32 tenacity		= 18;
	required uint32 slay			= 19;
	required uint32 proficiency		= 20;
	required uint32 vision			= 21; 
	required CSRangeInfo birth		= 22;
	required CSMonsterInfo patrol	= 23;
}

message CSMonsterGroup {
	required uint32 referesh_time	= 1;
	required uint32 times			= 2;
	repeated CSMonsterInfo monsters	= 3;
}

message CSMapContent {
	required uint32 map_id			= 1;
	required uint32 hero_born		= 2;
	required uint32 portal			= 3;
	optional uint32 next_map_id		= 4;
	repeated CSMonsterGroup monster_group	= 5; 
};

message InstanceInfo {	
	required uint32 instance_id		= 1;
};


